--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -49,12 +49,11 @@ a {
 p {
     font-size: 16px;
 }
-
-.hero {
+/*Updated CSS rule for hero image*/
+.hero img {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -90,7 +89,7 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-/*Consolidated three benefit class rules for  */
+/*Consolidated three benefit class rules for headers within */
 .benefits-info h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -101,8 +100,8 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
-.search-engine-optimization {
+/*Consolidated three benefit class rules for benefits divs*/
+.features {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -111,50 +110,15 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.features img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+.features h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 /*changed rule from .footer class to footer element */
 footer {
     padding: 30px;
